--- a/MainTemplateDark.css
+++ b/MainTemplateDark.css
@@ -15,8 +15,8 @@ body {
     @media screen and (max-width:900px){
 	body{
 	width: 100%;
-	background-size:contain;
-	background-repeat: repeat-y;
+	background-size:cover;
+	/*background-repeat: repeat-y;*/
 	position: center bottom;
 	object-fit: cover;
 	background-position:center ;
@@ -333,22 +333,22 @@ div.gallery img {
 
 
 .bottomtabs {	
-	display: inherit;
-	align-content: stretch;
-	align-content: space-between;
-	float: left;
-	width: cover;
+	width:max-content;
 	background-color: white;
-	padding: 0px 5px;
-	border: 2px solid gray;
-	margin: 0px 90px;
+	padding: 0px;
+	border: 3px solid white;
+	margin:auto;
 }
 
 div.bottomtabs:hover{
 	border: 2px solid black;
 }
 div.bottomtabs img {
-	justify-content: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 250px;
+	max-height: 250px;
 
 }
 .bottomtabsdesc {
